build/log/idf_py_stdout_output_16269
[1/11] Linking C static library esp-idf/usei2c/libusei2c.a
[2/11] Building C object esp-idf/mpu6050/CMakeFiles/__idf_mpu6050.dir/mpu6050.c.obj
FAILED: esp-idf/mpu6050/CMakeFiles/__idf_mpu6050.dir/mpu6050.c.obj 
/Users/moker/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/moker/Projects/ESP32/self_balance_car/build/config -I/Users/moker/Projects/ESP32/self_balance_car/mpu6050/include -I/Users/moker/Projects/ESP32/self_balance_car/components/newlib/platform_include -I/Users/moker/Projects/ESP32/self_balance_car/components/freertos/config/include -I/Users/moker/Projects/ESP32/self_balance_car/components/freertos/config/include/freertos -I/Users/moker/Projects/ESP32/self_balance_car/components/freertos/config/xtensa/include -I/Users/moker/Projects/ESP32/self_balance_car/components/freertos/FreeRTOS-Kernel/include -I/Users/moker/Projects/ESP32/self_balance_car/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/moker/Projects/ESP32/self_balance_car/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/moker/Projects/ESP32/self_balance_car/components/freertos/esp_additions/include -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_hw_support/include -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_hw_support/include/soc -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_hw_support/include/soc/esp32 -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_hw_support/dma/include -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_hw_support/ldo/include -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_hw_support/port/esp32/. -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_hw_support/port/esp32/include -I/Users/moker/Projects/ESP32/self_balance_car/components/heap/include -I/Users/moker/Projects/ESP32/self_balance_car/components/log/include -I/Users/moker/Projects/ESP32/self_balance_car/components/soc/include -I/Users/moker/Projects/ESP32/self_balance_car/components/soc/esp32 -I/Users/moker/Projects/ESP32/self_balance_car/components/soc/esp32/include -I/Users/moker/Projects/ESP32/self_balance_car/components/hal/platform_port/include -I/Users/moker/Projects/ESP32/self_balance_car/components/hal/esp32/include -I/Users/moker/Projects/ESP32/self_balance_car/components/hal/include -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_rom/include -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_rom/include/esp32 -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_rom/esp32 -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_common/include -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_system/include -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_system/port/soc -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_system/port/include/private -I/Users/moker/Projects/ESP32/self_balance_car/components/xtensa/esp32/include -I/Users/moker/Projects/ESP32/self_balance_car/components/xtensa/include -I/Users/moker/Projects/ESP32/self_balance_car/components/xtensa/deprecated_include -I/Users/moker/Projects/ESP32/self_balance_car/components/lwip/include -I/Users/moker/Projects/ESP32/self_balance_car/components/lwip/include/apps -I/Users/moker/Projects/ESP32/self_balance_car/components/lwip/include/apps/sntp -I/Users/moker/Projects/ESP32/self_balance_car/components/lwip/lwip/src/include -I/Users/moker/Projects/ESP32/self_balance_car/components/lwip/port/include -I/Users/moker/Projects/ESP32/self_balance_car/components/lwip/port/freertos/include -I/Users/moker/Projects/ESP32/self_balance_car/components/lwip/port/esp32xx/include -I/Users/moker/Projects/ESP32/self_balance_car/components/lwip/port/esp32xx/include/arch -I/Users/moker/Projects/ESP32/self_balance_car/components/lwip/port/esp32xx/include/sys -I/Users/moker/Projects/ESP32/self_balance_car/usei2c/include -I/Users/moker/Projects/ESP32/self_balance_car/components/esp_driver_i2c/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/moker/Projects/ESP32/self_balance_car=. -fmacro-prefix-map=/Users/moker/Clitools/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/mpu6050/CMakeFiles/__idf_mpu6050.dir/mpu6050.c.obj -MF esp-idf/mpu6050/CMakeFiles/__idf_mpu6050.dir/mpu6050.c.obj.d -o esp-idf/mpu6050/CMakeFiles/__idf_mpu6050.dir/mpu6050.c.obj -c /Users/moker/Projects/ESP32/self_balance_car/mpu6050/mpu6050.c
In file included from /Users/moker/Projects/ESP32/self_balance_car/mpu6050/include/mpu6050.h:3,
                 from /Users/moker/Projects/ESP32/self_balance_car/mpu6050/include/mpu6050_6Axis.h:3,
                 from /Users/moker/Projects/ESP32/self_balance_car/mpu6050/mpu6050.c:8:
/Users/moker/Projects/ESP32/self_balance_car/usei2c/include/usei2c.h:18:3: error: conflicting types for 'usei2c_config_t'; have 'struct <anonymous>'
   18 | } usei2c_config_t;
      |   ^~~~~~~~~~~~~~~
In file included from /Users/moker/Projects/ESP32/self_balance_car/mpu6050/include/mpu6050.h:3,
                 from /Users/moker/Projects/ESP32/self_balance_car/mpu6050/mpu6050.c:7:
/Users/moker/Projects/ESP32/self_balance_car/usei2c/include/usei2c.h:18:3: note: previous declaration of 'usei2c_config_t' with type 'usei2c_config_t'
   18 | } usei2c_config_t;
      |   ^~~~~~~~~~~~~~~
/Users/moker/Projects/ESP32/self_balance_car/usei2c/include/usei2c.h:152:11: error: conflicting types for 'usei2c_init'; have 'esp_err_t(usei2c_config_t *)' {aka 'int(usei2c_config_t *)'}
  152 | esp_err_t usei2c_init(usei2c_config_t *usei2c_cfg);
      |           ^~~~~~~~~~~
/Users/moker/Projects/ESP32/self_balance_car/usei2c/include/usei2c.h:152:11: note: previous declaration of 'usei2c_init' with type 'esp_err_t(usei2c_config_t *)' {aka 'int(usei2c_config_t *)'}
  152 | esp_err_t usei2c_init(usei2c_config_t *usei2c_cfg);
      |           ^~~~~~~~~~~
/Users/moker/Projects/ESP32/self_balance_car/mpu6050/include/mpu6050.h:35:3: error: conflicting types for 'mpu6050_t'; have 'struct <anonymous>'
   35 | } mpu6050_t;
      |   ^~~~~~~~~
/Users/moker/Projects/ESP32/self_balance_car/mpu6050/include/mpu6050.h:35:3: note: previous declaration of 'mpu6050_t' with type 'mpu6050_t'
   35 | } mpu6050_t;
      |   ^~~~~~~~~
/Users/moker/Projects/ESP32/self_balance_car/mpu6050/include/mpu6050.h:105:11: error: conflicting types for 'mpu6050_init'; have 'esp_err_t(mpu6050_t *)' {aka 'int(mpu6050_t *)'}
  105 | esp_err_t mpu6050_init(mpu6050_t *mpu6050);
      |           ^~~~~~~~~~~~
/Users/moker/Projects/ESP32/self_balance_car/mpu6050/include/mpu6050.h:105:11: note: previous declaration of 'mpu6050_init' with type 'esp_err_t(mpu6050_t *)' {aka 'int(mpu6050_t *)'}
  105 | esp_err_t mpu6050_init(mpu6050_t *mpu6050);
      |           ^~~~~~~~~~~~
/Users/moker/Projects/ESP32/self_balance_car/mpu6050/mpu6050.c:90:11: error: conflicting types for 'mpu6050_init'; have 'esp_err_t(mpu6050_t *)' {aka 'int(mpu6050_t *)'}
   90 | esp_err_t mpu6050_init(mpu6050_t* mpu6050) {
      |           ^~~~~~~~~~~~
/Users/moker/Projects/ESP32/self_balance_car/mpu6050/include/mpu6050.h:105:11: note: previous declaration of 'mpu6050_init' with type 'esp_err_t(mpu6050_t *)' {aka 'int(mpu6050_t *)'}
  105 | esp_err_t mpu6050_init(mpu6050_t *mpu6050);
      |           ^~~~~~~~~~~~
[3/11] Performing build step for 'bootloader'
[1/1] cd /Users/moker/Projects/ESP32/self_balance_car/build/bootloader/esp-idf/esptool_py && /Users/moker/.espressif/python_env/idf5.3_py3.12_env/bin/python /Users/moker/Clitools/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/moker/Projects/ESP32/self_balance_car/build/bootloader/bootloader.bin
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
ninja: build stopped: subcommand failed.
